// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Action/> should render with a Body component 1`] = `
<div
  class="http"
>
  <div
    class="formParamRow"
  >
    <div
      class="formParamCol"
    >
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-method"
        >
          Method
        </label>
        <div
          class=""
        >
          <select
            class="form-control"
            id="id-method"
            required=""
          >
            <option
              value="GET"
            >
              GET
            </option>
            <option
              value="POST"
            >
              POST
            </option>
            <option
              value="PUT"
            >
              PUT
            </option>
            <option
              value="DELETE"
            >
              DELETE
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      class="formParamCol"
    >
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-url"
        >
          URL
        </label>
        <div
          class=""
        >
          <input
            class="form-control"
            id="id-url"
            pattern="*"
            required=""
            type="text"
            value="www.someurl.com"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="mt-3 form-group"
  >
    <label
      class="control-label"
    >
      Headers
    </label>
    <div>
      <button
        class="btn btn-secondary btn-sm"
        type="button"
      >
        <i
          class="material-icons formParamIcon"
        >
          add
        </i>
      </button>
    </div>
  </div>
  <div
    class="mt-3 form-group"
  >
    <label
      class="control-label"
    >
      Parameters
    </label>
    <div>
      <button
        class="btn btn-secondary btn-sm"
        type="button"
      >
        <i
          class="material-icons formParamIcon"
        >
          add
        </i>
      </button>
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="control-label"
    >
      Body
    </label>
    <div
      class="mb-3"
    >
      <div
        class="form-check"
        color=""
      >
        <label
          class="control-label form-check-label"
          for="id-input-1"
        >
          <input
            checked=""
            class="form-check-input form-check-input"
            id="id-input-1"
            type="radio"
          />
          <span
            style="vertical-align: middle;"
          >
            application/json
          </span>
        </label>
      </div>
      <div
        class="form-check"
        color=""
      >
        <label
          class="control-label form-check-label"
          for="id-input-2"
        >
          <input
            class="form-check-input form-check-input"
            id="id-input-2"
            type="radio"
          />
          <span
            style="vertical-align: middle;"
          >
            application/x-www-form-urlencoded
          </span>
        </label>
      </div>
    </div>
    <div
      class="InputField form-group"
      color=""
    >
      <div
        class=""
      >
        <div
          class="form-group"
        >
          <div
            class="controls"
          >
            <textarea
              class="form-control"
              id="id-json"
              rows="6"
            >
              {}
            </textarea>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Action/> should render without a Body component 1`] = `
<div
  class="http"
>
  <div
    class="formParamRow"
  >
    <div
      class="formParamCol"
    >
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-method"
        >
          Method
        </label>
        <div
          class=""
        >
          <select
            class="form-control"
            id="id-method"
            required=""
          >
            <option
              value="GET"
            >
              GET
            </option>
            <option
              value="POST"
            >
              POST
            </option>
            <option
              value="PUT"
            >
              PUT
            </option>
            <option
              value="DELETE"
            >
              DELETE
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      class="formParamCol"
    >
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-url"
        >
          URL
        </label>
        <div
          class=""
        >
          <input
            class="form-control"
            id="id-url"
            pattern="*"
            required=""
            type="text"
            value="www.someurl.com"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="mt-3 form-group"
  >
    <label
      class="control-label"
    >
      Headers
    </label>
    <div>
      <button
        class="btn btn-secondary btn-sm"
        type="button"
      >
        <i
          class="material-icons formParamIcon"
        >
          add
        </i>
      </button>
    </div>
  </div>
  <div
    class="mt-3 form-group"
  >
    <label
      class="control-label"
    >
      Parameters
    </label>
    <div>
      <button
        class="btn btn-secondary btn-sm"
        type="button"
      >
        <i
          class="material-icons formParamIcon"
        >
          add
        </i>
      </button>
    </div>
  </div>
</div>
`;
